# ai-engineering-bootcamp

./: .gitignore  requirements.txt
assignments/week01/code/: dotenv_test.py  http_post.py  langchain_test.py  langgragh_test.py  memory_test.py  openaiAPI.py  prommpt_template_test.py  tool_calls.py
assignments/week03/code/: llamaIndex_demo.py  llamaIndex_demo2.py
assignments/week03/data/: 05-coffee-shop-operations.md  06-pet-clinic-guide.md  07-city-travel-guide.md  08-hydroponic-farm-guide.md
notes/week03/: day01.md
projects/model01_01_multitask_agent/: main.py
projects/project01_1/: .env.example  .gitignore  README.md  main_langchain.py  main_langgragh.py  pyproject.toml  requirements.txt  run.py  start.sh
projects/project01_1/app/: main.py
projects/project01_1/app/chain/: core.py
projects/project01_1/app/config/: settings.py
projects/project01_1/app/state/: __init__.py  cache.py  history.py
projects/project01_1/app/tools/: __init__.py  base.py  news.py  weather.py
projects/project01_1/tests/: test_state.py  test_tools.py
